--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="key" >Situación Laboral</div>
+    
+    <div class="container-key-value " >
+        <label for="" class="key key--value">Situación Laboral</label>
+        <input placeholder="" type="text"class= "value">
+    </div>
+       
 </body>
 </html>
