Add grid general an css trick

--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+     <div class="general-grid">
+       
+        <div class="container-key-value col-span-2 ">
+            <label for="" class="key key--value">Situación Laboral</label>
+            <input placeholder="" type="text"class= "value">
+        </div>
+        <div class="item-a ">b</div>
+        <div class="item-a ">c</div>
+        <div class="item-a ">d</div>
+        <div>e</div>
+        <div class="item-a ">f</div>
+        <div class="item-a ">g</div>
+        <div class="item-a ">h</div>
+        <div class="item-a ">i</div>
+        <div class="item-a ">j</div>
+
+     </div>
     <div class="container-key-value " >
         <label for="" class="key key--value">Situación Laboral</label>
         <input placeholder="" type="text"class= "value">
